added support for csv's schemas

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,11 +5,12 @@ sources {
   //example of configuration for csv files
   file {
     required {
-      path = "/home/stefano/Documents/*.csv"
+      path = "/home/stefano/Documents/SPARKINGEST/*.csv"
       format = "csv"
     }
     optional {
-      sep = ";"
+      refreshTime = 10000 //check every X ms for new files
+      sep = ","
     }
     //IF SCHEMA IS PRESENT, IT WILL BE TAKEN
     schema {
@@ -40,7 +41,6 @@ sinks {
       format = "json"
     }
     optional {
-      refreshTime = 10000 //check every X ms for new files
       outputMode = "append"
     }
   }
@@ -51,5 +51,14 @@ sinks {
       kafka-bootstrap-servers = "localhost:9092"
     }
     optional {}
+  }
+}
+
+
+//transformation are all optionals
+transform {
+  watermark {
+    column="sparkProcessTime"
+    time="10 minute"
   }
 }
