added basic case of data enrichment, adding date

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,11 +1,11 @@
-checkpointLocation = "file:///home/stefano/Documents/SPARKINGEST/checkpoints"
+checkpointLocation = "file:///home/sympho410/Documents/SPARKINGEST/checkpoints"
 
 sources {
 
   //example of configuration for csv files
   file {
     required {
-      path = "/home/stefano/Documents/SPARKINGEST/*.csv"
+      path = "/home/sympho410/Documents/SPARKINGEST/*.csv"
       format = "csv"
     }
     optional {
@@ -37,7 +37,7 @@ sinks {
 
   file {
     required {
-      path = "file:///home/stefano/Documents/SPARKINGEST"
+      path = "file:///home/sympho410/Documents/SPARKINGEST"
       format = "json"
     }
     optional {
@@ -56,9 +56,13 @@ sinks {
 
 
 //transformation are all optionals
-transform {
+transformations {
+
+  date {
+    column="sparkProcessTime"
+  }
+
   watermark {
     column="sparkProcessTime"
-    time="10 minute"
   }
 }
