--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,23 +1,23 @@
-checkpointLocation = "file:///home/sympho410/Documents/SPARKINGEST/checkpoints"
+checkpointLocation = "file:///home/stefano/Documents/SPARKINGEST/checkpoints"
 
 sources {
 
   //example of configuration for csv files
   file {
     required {
-      path = "/home/sympho410/Documents/SPARKINGEST/*.csv"
+      path = "/home/stefano/Documents/SPARKINGEST/*.csv"
       format = "csv"
     }
     optional {
-      refreshTime = 10000 //check every X ms for new files
+      refreshTime = 1 //check every X ms for new files
       sep = ","
     }
     //IF SCHEMA IS PRESENT, IT WILL BE TAKEN
-    schema {
-      name: string
-      surname: string
-      age: int
-    }
+    schema = [
+      {name: string},
+      {surname: string}
+      {age: int}
+    ]
   }
 
   kafka {
@@ -37,7 +37,7 @@ sinks {
 
   file {
     required {
-      path = "file:///home/sympho410/Documents/SPARKINGEST"
+      path = "file:///home/stefano/Documents/SPARKINGEST"
       format = "json"
     }
     optional {
