FIXED: kafka sink not outputing custom values ADDED: add column and remove transformations. TODO.md

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -45,6 +45,7 @@ sinks {
     }
   }
 
+  //writes whole row to kafka topic as JSON
   kafka {
     required {
       topic = "enriched"
@@ -60,14 +61,33 @@ sinks {
 }
 
 
-//transformation are all optionals
+//transformation are all optionals, and will be executed sequentially
 transformations {
 
   date {
-    column="sparkProcessTime"
+    column = "sparkProcessTime"
   }
 
   watermark {
-    column="sparkProcessTime"
+    column = "sparkProcessTime"
+  }
+
+  add {
+    columns {
+
+      dummyNum1 {
+        value = "1"
+      }
+
+
+      dummyNum2 {
+        value = "2"
+      }
+
+    }
+  }
+
+  remove {
+    columns = ["dummyNum2"]
   }
 }
