ADDED: logic to execute selected transformations ADJUSTED: logic to call selected source/sink/transformations avoiding ugly ifs.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -63,13 +63,13 @@ sinks {
 
 //transformation are all optionals, and will be executed sequentially
 transformations {
-
   date {
     column = "sparkProcessTime"
   }
 
   watermark {
     column = "sparkProcessTime"
+    duration = "10 minute"
   }
 
   add {
