ADDED:ES sink, es dependencies ADJUSTED: some logic of the application.conf that has been reflected on code

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -21,15 +21,25 @@ sources {
   }
 
   kafka {
+    kafka-bootstrap-servers = "localhost:9092" //comma separated list
+
     required {
       subscribe = "ingestion" //topic(s) to subscribe to
-      kafka-bootstrap-servers = "localhost:9092"
     }
     optional {
       startingOffsets = "earliest" //earliest: from start of kafka topic, latest: only new data from now.
     }
   }
 
+  es {
+    index = "spark"
+    logType = "people"
+
+    required {}
+    optional {
+      checkpointLocation = "/home/stefano/Documents/SPARKINGESTES"
+    }
+  }
 
 }
 
@@ -47,14 +57,23 @@ sinks {
 
   //writes whole row to kafka topic as JSON
   kafka {
+    kafka-bootstrap-servers = "localhost:9092"
+
     required {
       topic = "enriched"
-      kafka-bootstrap-servers = "localhost:9092"
     }
     optional {}
   }
 
   console {
+    required {}
+    optional {}
+  }
+
+  es {
+    index = "spark"
+    type = "people"
+
     required {}
     optional {}
   }
