FIXED: transformations over data are now applied sequentially

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -80,8 +80,10 @@ sinks {
 }
 
 
-//transformation are all optionals, and will be executed sequentially
 transformations {
+  //defined order of transformations to apply
+  order = ["remove", "add", "date"]
+
   date {
     column = "sparkProcessTime"
   }
