ADDED: filter and select transformations

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -82,7 +82,7 @@ sinks {
 
 transformations {
   //defined order of transformations to apply
-  order = ["remove", "add", "date"]
+  order = ["date", "filter", "select"]
 
   date {
     column = "sparkProcessTime"
@@ -108,7 +108,10 @@ transformations {
     }
   }
 
+  filter = ["name LIKE 'stefano%'"]
+  select = ["sparkProcessTime", "name"]
+
   remove {
-    columns = ["dummyNum2"]
+    columns = []
   }
 }
