ADDED: support for streaming listeners (currently kafka and file)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,10 @@
-checkpointLocation = "file:///home/stefano/Documents/SPARKINGEST/checkpoints"
+application {
+  checkpointLocation = "file:///home/stefano/Documents/SPARKINGEST/checkpoints"
+}
 
 sources {
+
+  sourceToApply ="kafka"
 
   //example of configuration for csv files
   file {
@@ -45,6 +49,8 @@ sources {
 
 sinks {
 
+  sinkToApply="console"
+
   file {
     required {
       path = "file:///home/stefano/Documents/SPARKINGEST"
@@ -79,10 +85,9 @@ sinks {
   }
 }
 
-
 transformations {
   //defined order of transformations to apply
-  order = ["date", "filter", "select"]
+  order = ["date"]
 
   date {
     column = "sparkProcessTime"
@@ -108,10 +113,31 @@ transformations {
     }
   }
 
-  filter = ["name LIKE 'stefano%'"]
-  select = ["sparkProcessTime", "name"]
+  filter = [
+    "name LIKE 'stefano%'"
+  ]
+  select = [
+    "sparkProcessTime", "name"
+  ]
 
   remove {
     columns = []
   }
+}
+
+listeners {
+
+  listenersToApply = ["file"]
+
+  kafka {
+    topic="metrics"
+    servers=${sources.kafka.kafka-bootstrap-servers}
+    keySerializer="org.apache.kafka.common.serialization.StringSerializer"
+    valueSerializer="org.apache.kafka.common.serialization.StringSerializer"
+  }
+
+  file {
+    filename = "/home/stefano/Documents/SPARKINGEST/sparkstream.log"
+  }
+
 }
