project files update.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ application {
 
 sources {
 
-  sourceToApply ="kafka"
+  sourceToApply = "file"
 
   //example of configuration for csv files
   file {
@@ -35,21 +35,11 @@ sources {
     }
   }
 
-  es {
-    index = "spark"
-    logType = "people"
-
-    required {}
-    optional {
-      checkpointLocation = "/home/stefano/Documents/SPARKINGESTES"
-    }
-  }
-
 }
 
 sinks {
 
-  sinkToApply="console"
+  sinkToApply = "es"
 
   file {
     required {
@@ -73,7 +63,9 @@ sinks {
 
   console {
     required {}
-    optional {}
+    optional {
+      outputMode="update"
+    }
   }
 
   es {
@@ -87,7 +79,7 @@ sinks {
 
 transformations {
   //defined order of transformations to apply
-  order = ["date"]
+  order = ["date", "watermark", "add"]
 
   date {
     column = "sparkProcessTime"
@@ -123,6 +115,14 @@ transformations {
   remove {
     columns = []
   }
+
+  count {
+    watermarkColumn = "sparkProcessTime"
+    windowTime="2 minute"
+    slidingTime="1 minute"
+    columns = ["dummyNum1"]
+  }
+
 }
 
 listeners {
@@ -130,10 +130,10 @@ listeners {
   listenersToApply = ["file"]
 
   kafka {
-    topic="metrics"
-    servers=${sources.kafka.kafka-bootstrap-servers}
-    keySerializer="org.apache.kafka.common.serialization.StringSerializer"
-    valueSerializer="org.apache.kafka.common.serialization.StringSerializer"
+    topic = "metrics"
+    servers = ${sources.kafka.kafka-bootstrap-servers}
+    keySerializer = "org.apache.kafka.common.serialization.StringSerializer"
+    valueSerializer = "org.apache.kafka.common.serialization.StringSerializer"
   }
 
   file {
