Experiment of adding to the project static sources. Main goal would be to use them for joined sources

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ application {
 
 sources {
 
-  sourceToApply = "file"
+  sourceToApply = "es"
 
   //example of configuration for csv files
   file {
@@ -35,11 +35,29 @@ sources {
     }
   }
 
+  static {
+    //WARNING: THIS IS A STATIC SOURCE. Adding it because in the future could be nice to join to (e.g. join stream with static es)
+    es {
+      index = "spark"
+      type = "people"
+
+      columns="sparkProcessTime,age"
+      filter="age < 0"
+
+      required {
+        path = ${sources.static.es.index}/${sources.static.es.type}
+        nodes = "localhost:9200"
+      }
+      optional {}
+    }
+
+  }
+
 }
 
 sinks {
 
-  sinkToApply = "es"
+  sinkToApply = "console"
 
   file {
     required {
@@ -64,7 +82,7 @@ sinks {
   console {
     required {}
     optional {
-      outputMode="update"
+      outputMode = "update"
     }
   }
 
@@ -118,8 +136,8 @@ transformations {
 
   count {
     watermarkColumn = "sparkProcessTime"
-    windowTime="2 minute"
-    slidingTime="1 minute"
+    windowTime = "2 minute"
+    slidingTime = "1 minute"
     columns = ["dummyNum1"]
   }
 
