--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ application {
 
 sources {
 
-  sourceToApply = "file"
+  sourceToApply = "joinables"
 
   //example of configuration for csv files
   file {
@@ -24,6 +24,75 @@ sources {
     ]
   }
 
+  joinables {
+
+    toJoin = ["file1", "file2"]
+    joinConditions = ["name = namerino AND sparkProcessTime >=  processTime AND sparkProcessTime <= processTime + INTERVAL 1 HOUR"]
+
+    file1 {
+      sourceType = "file"
+      required {
+        path = "/home/stefano/Documents/SPARKINGEST/*.csv"
+        format = "csv"
+      }
+      optional {
+        refreshTime = 1 //check every X ms for new files
+        sep = ","
+      }
+      //IF SCHEMA IS PRESENT, IT WILL BE TAKEN
+      schema = [
+        {name: string},
+        {surname: string}
+        {age: int}
+      ]
+
+      transformations = ["date"]
+      order = ["date"]
+
+      date {
+        column = "processTime"
+      }
+
+    }
+
+    file2 {
+      sourceType = "file"
+      required {
+        path = "/home/stefano/pathAlternativo/*.csv"
+        format = "csv"
+      }
+      optional {
+        refreshTime = 1 //check every X ms for new files
+        sep = ","
+      }
+      //IF SCHEMA IS PRESENT, IT WILL BE TAKEN
+      schema = [
+        {namerino: string},
+        {surname: string}
+        {age: int}
+      ]
+
+      transformations = ["date"]
+      order = ["date"]
+
+      date {
+        column = "sparkProcessTime"
+      }
+    }
+
+    kafka2 {
+      sourceType = "kafka"
+      kafka-bootstrap-servers = "localhost:9092" //comma separated list
+
+      required {
+        subscribe = "ingestion" //topic(s) to subscribe to
+      }
+      optional {
+        startingOffsets = "earliest" //earliest: from start of kafka topic, latest: only new data from now.
+      }
+    }
+  }
+
   kafka {
     kafka-bootstrap-servers = "localhost:9092" //comma separated list
 
@@ -39,7 +108,7 @@ sources {
 
 sinks {
 
-  sinkToApply = "es"
+  sinkToApply = "console"
 
   file {
     required {
@@ -64,7 +133,7 @@ sinks {
   console {
     required {}
     optional {
-      outputMode="update"
+      outputMode = "complete"
     }
   }
 
@@ -118,8 +187,8 @@ transformations {
 
   count {
     watermarkColumn = "sparkProcessTime"
-    windowTime="2 minute"
-    slidingTime="1 minute"
+    windowTime = "2 minute"
+    slidingTime = "1 minute"
     columns = ["dummyNum1"]
   }
 
